--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -7,11 +7,11 @@
     <x>0</x>
     <y>0</y>
     <width>918</width>
-    <height>616</height>
+    <height>643</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>MainWindow</string>
+   <string>ИПС &quot;Спортивный комплекс&quot;</string>
   </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QVBoxLayout" name="verticalLayout_4">
@@ -110,7 +110,33 @@
           </widget>
          </item>
          <item row="1" column="1">
-          <widget class="QComboBox" name="comboBoxType"/>
+          <widget class="QComboBox" name="comboBoxType">
+           <item>
+            <property name="text">
+             <string>Выбрать...</string>
+            </property>
+           </item>
+           <item>
+            <property name="text">
+             <string>Силовой тренажёр</string>
+            </property>
+           </item>
+           <item>
+            <property name="text">
+             <string>Кардио тренажёр</string>
+            </property>
+           </item>
+           <item>
+            <property name="text">
+             <string>Тренажёр с собственным весом</string>
+            </property>
+           </item>
+           <item>
+            <property name="text">
+             <string>Скамьи и стойки</string>
+            </property>
+           </item>
+          </widget>
          </item>
          <item row="6" column="2">
           <widget class="QCheckBox" name="checkBoxWeight">
@@ -313,6 +339,9 @@
         <height>300</height>
        </size>
       </property>
+      <attribute name="verticalHeaderVisible">
+       <bool>false</bool>
+      </attribute>
      </widget>
     </item>
    </layout>
@@ -336,6 +365,8 @@
     <addaction name="separator"/>
     <addaction name="actionSave"/>
     <addaction name="actionSaveAs"/>
+    <addaction name="separator"/>
+    <addaction name="action_Close"/>
    </widget>
    <widget class="QMenu" name="menu_2">
     <property name="title">
@@ -389,6 +420,11 @@
   <action name="actionAbout">
    <property name="text">
     <string>О программе...</string>
+   </property>
+  </action>
+  <action name="action_Close">
+   <property name="text">
+    <string>Закрыть окно</string>
    </property>
   </action>
  </widget>
